item list detail page styles

--- a/tasks/static/tasks/styles.css
+++ b/tasks/static/tasks/styles.css
@@ -91,6 +91,7 @@ header {
 }
 .item-clone {
     position: absolute;
+    max-width: 120px;
 }
 .task-item.dragging, .item-clone.dragging {
     opacity: 0.5;
