--- a/tasks/templates/tasks/item_list_detail.html
+++ b/tasks/templates/tasks/item_list_detail.html
@@ -90,26 +90,35 @@
             <div class="list-group" id="items-list">
                 {% for item in items %}
                 <div class="list-group-item d-flex justify-content-between align-items-center task-item" draggable="true" data-id="{{ item.id }}" data-position-x="{{ item.position_x }}" data-position-y="{{ item.position_y }}" data-priority="{{ item.priority }}" data-order="{{ item.order }}" data-deadline="{{ item.deadline }}">
-                    <div>
+                    <div class="p-2">
                         <input type="checkbox" class="select-item me-2" value="{{ item.id }}">
                         <strong>{{ item.title }}</strong> <br>
                         <small>Deadline: {{ item.deadline }}</small>
                         <small class="text-muted" id="assigned-quadrant-{{ item.id }}">Assigned to: {{ item.priority }}</small>
                     </div>
-                    <div class="d-flex flex-column flex-md-row mx-3">
-                        <button class="btn btn-outline-secondary btn-sm mb-2 mb-md-0 me-md-2" onclick="assignPriority('{{ item.id }}', 'doFirst')">Do First</button>
-                        <button class="btn btn-outline-secondary btn-sm mb-2 mb-md-0 me-md-2" onclick="assignPriority('{{ item.id }}', 'schedule')">Schedule</button>
-                        <button class="btn btn-outline-secondary btn-sm mb-2 mb-md-0 me-md-2" onclick="assignPriority('{{ item.id }}', 'delegate')">Delegate</button>
-                        <button class="btn btn-outline-secondary btn-sm" onclick="assignPriority('{{ item.id }}', 'eliminate')">Eliminate</button>
+                    <div class="mx-5">
+                        <div class="d-flex flex-column flex-md-row mb-2" style="height: 4.25rem;">
+                            <div class="d-flex flex-wrap">
+                                <button class="btn btn-outline-secondary btn-sm m-0" style="flex: 0 0 48%; border-radius: 0;" onclick="assignPriority('{{ item.id }}', 'doFirst')">Do First</button>
+                                <button class="btn btn-outline-secondary btn-sm m-0" style="flex: 0 0 48%; border-radius: 0;" onclick="assignPriority('{{ item.id }}', 'schedule')">Schedule</button>
+                                <button class="btn btn-outline-secondary btn-sm m-0" style="flex: 0 0 48%; border-radius: 0;" onclick="assignPriority('{{ item.id }}', 'delegate')">Delegate</button>
+                                <button class="btn btn-outline-secondary btn-sm m-0" style="flex: 0 0 48%; border-radius: 0;" onclick="assignPriority('{{ item.id }}', 'eliminate')">Eliminate</button>
+                            </div>
+                        </div>
+                        <div class="ms-auto">
+                            <!-- Button to Remove Item Clone -->
+                            <button class="btn btn-outline-danger btn-sm d-flex align-items-center ms-auto" onclick="removeItemClone('{{ item.id }}')">
+                                <i class="fas fa-times me-2"></i>&nbsp;Remove from Matrix
+                            </button>
+                        </div>
                     </div>
-    <!-- Button to Remove Item Clone -->
-<button class="btn btn-outline-danger btn-sm" onclick="removeItemClone('{{ item.id }}')">Remove from Matrix</button>
-    <div class="position-absolute" style="right: 0; top: 0;">
-        <button class="btn btn-sm" data-bs-toggle="modal" data-bs-target="#editItemModal" data-id="{{ item.id }}" data-title="{{ item.title }}" data-description="{{ item.description }}" data-deadline="{{ item.deadline }}">
-            <i class="fas fa-edit"></i>
-        </button>
-    </div>
-</div>
+    
+                    <div class="position-absolute" style="right: 0; top: 0;">
+                        <button class="btn btn-sm" data-bs-toggle="modal" data-bs-target="#editItemModal" data-id="{{ item.id }}" data-title="{{ item.title }}" data-description="{{ item.description }}" data-deadline="{{ item.deadline }}">
+                            <i class="fas fa-edit"></i>
+                        </button>
+                    </div>
+                </div>
                 {% endfor %}
             </div>
         </div>
@@ -566,7 +575,7 @@
                 newItem.setAttribute('data-order', '');
                 newItem.setAttribute('data-deadline', deadline);
                 newItem.innerHTML = `
-                <div>
+                <div class="p-2">
                     <input type="checkbox" class="select-item me-2">
                     <strong>${title}</strong> <br>
                     <small class="text-muted">Deadline: ${deadline ? deadline : 'None'}</small>
@@ -627,7 +636,7 @@
                 newItem.setAttribute('data-order', '');
                 newItem.setAttribute('data-deadline', '');
                 newItem.innerHTML = `
-                    <div>
+                    <div class="p-2">
                     <input type="checkbox" class="select-item me-2">
                     <strong>${item.title}</strong> <br>
                     <small class="text-muted">Deadline: None</small>
