--- a/tasks/static/tasks/styles.css
+++ b/tasks/static/tasks/styles.css
@@ -82,19 +82,20 @@ header {
     padding: 0 !important;
 }
 .task-item, .item-clone {
-    border: 1px solid var(--medium-gray);
-    border-radius: 5px;
-    margin-bottom: 5px;
     background-color: rgba(248, 249, 250, 0.8);
-    cursor: move;
-    display: inline-block;
-    font-size: 12px;
     width: auto;
 }
 .item-clone {
     position: absolute;
     max-width: 120px;
     padding: .25rem;
+    border: 1px solid var(--medium-gray);
+    border-radius: 5px;
+    background-color: rgba(248, 249, 250, 0.8);
+    cursor: move;
+    display: inline-block;
+    font-size: .75rem;
+    width: auto;
 }
 .task-item.dragging, .item-clone.dragging {
     opacity: 0.5;
