--- a/tasks/templates/tasks/item_list_detail.html
+++ b/tasks/templates/tasks/item_list_detail.html
@@ -6,7 +6,7 @@
     <title>ScrollToDo - Organize, Prioritize, and Conquer</title>
     {% load static %}
     <link href="{% static 'tasks/styles.css' %}" rel="stylesheet">
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Roboto:wght@400;700&family=Space+Mono:wght@400;700&display=swap" rel="stylesheet">
     <link rel="icon" href="{% static 'favicon.ico' %}" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -26,11 +26,12 @@
         <div class="mt-4">
             <h3 class="fw-bold">Priority Matrix</h3>
             <div class="row">
-                <div class="col-12 position-relative border-left border-bottom border-3 border-dark p-3">
-                    <i class="fas fa-caret-up position-absolute" style="top: -5px; left: -5px;"></i>
-                    <p class="position-absolute" style="top: -.6rem; left: 1rem;">Impact</p>
-                    <i class="fas fa-caret-right position-absolute" style="bottom: -8px; right: -5px;"></i>
-                    <p class="position-absolute" style="bottom: -2.5rem; right: 0;">Effort</p>
+                <div class="p-2 p-md-3">
+                <div class="col-12 position-relative border-start border-bottom border-3 border-primary p-2 p-md-3">
+                    <i class="fas fa-caret-up position-absolute fs-3 text-primary" style="top: -.5rem; left: -.6rem;"></i>
+                    <p class="position-absolute text-primary" style="top: -1rem; left: .5rem;">Impact</p>
+                    <i class="fas fa-caret-right position-absolute fs-3 text-primary" style="bottom: -.9rem; right: -.5rem;"></i>
+                    <p class="position-absolute text-primary" style="bottom: -2.6rem; right: .25rem;">Effort</p>
                     <div class="row m-0">
                         <div class="col-6 m-0 p-0">
                             <div class="quadrant border m-0 p-3 position-relative overflow-hidden" id="doFirst">
@@ -67,20 +68,31 @@
                     </div>
                 </div>
             </div>
+            </div>
         </div>
 
         <div class="mt-4">
             <h3 class="fw-bold">Items</h3>
 
             <!-- Item Sorting and Actions -->
-            <div class="d-flex flex-column flex-md-row mb-3">
-                <div class="btn-group mb-2 mb-md-0" role="group" aria-label="Sorting options">
-                    <button type="button" class="btn btn-secondary" onclick="sortItems('deadline')">Sort by Deadline</button>
-                    <button type="button" class="btn btn-secondary" onclick="sortItems('priority')">Sort by Priority</button>
-                    <button type="button" class="btn btn-secondary" onclick="sortItems('alphabet')">Sort by Alphabet</button>
+            <div class="d-flex mb-2">
+                <div class="dropdown">
+                    <button class="btn btn-secondary dropdown-toggle" type="button" id="sortDropdown" data-bs-toggle="dropdown" aria-expanded="false">
+                        Sort Items
+                    </button>
+                    <ul class="dropdown-menu" aria-labelledby="sortDropdown">
+                        <li><a class="dropdown-item" href="#" onclick="sortItems('deadline')">Sort by Deadline</a></li>
+                        <li><a class="dropdown-item" href="#" onclick="sortItems('priority')">Sort by Priority</a></li>
+                        <li><a class="dropdown-item" href="#" onclick="sortItems('alphabet')">Sort by Alphabet</a></li>
+                    </ul>
                 </div>
-                <div class="ml-md-auto">
-                    <button type="button" class="btn btn-danger mb-md-0 me-md-2" onclick="deleteSelectedItems()">Delete Selected Items</button>
+                <div class="ms-auto">
+                    <button type="button" class="btn btn-danger mb-md-0 me-md-2" onclick="deleteSelectedItems()">
+                        <i class="fas fa-trash-alt"></i> 
+                        <span class="d-none d-md-inline">Delete Selected</span>
+                        <span class="d-inline d-md-none">Delete</span>
+                    </button>
+                    
                     <!-- Button to trigger the Add New Item Modal -->
                     <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addNewItemModal">
                         <i class="fas fa-plus"></i> Add Item
@@ -89,34 +101,36 @@
             </div>
             <div class="list-group" id="items-list">
                 {% for item in items %}
-                <div class="list-group-item d-flex justify-content-between align-items-center task-item p-2" draggable="true" data-id="{{ item.id }}" data-position-x="{{ item.position_x }}" data-position-y="{{ item.position_y }}" data-priority="{{ item.priority }}" data-order="{{ item.order }}" data-deadline="{{ item.deadline }}">
-                    <div>
+                <div class="list-group-item d-flex justify-content-between align-items-center task-item p-2 p-md-3 border border-secondary rounded mb-2 bg-light cursor-move d-inline-block small" draggable="true" data-id="{{ item.id }}" data-position-x="{{ item.position_x }}" data-position-y="{{ item.position_y }}" data-priority="{{ item.priority }}" data-order="{{ item.order }}" data-deadline="{{ item.deadline }}">
+                    <div class="w-100 me-2 align-self-start">
                         <input type="checkbox" class="select-item me-2" value="{{ item.id }}">
-                        <strong>{{ item.title }}</strong> <br>
+                        <strong>{{ item.title }}</strong> 
+                        <button class="btn btn-sm" data-bs-toggle="modal" data-bs-target="#editItemModal" data-id="{{ item.id }}" data-title="{{ item.title }}" data-description="{{ item.description }}" data-deadline="{{ item.deadline }}">
+                            <i class="fas fa-edit"></i>
+                        </button>
+                        <br>
                         <small>Deadline: {{ item.deadline }}</small>
                         <small class="text-muted" id="assigned-quadrant-{{ item.id }}">Assigned to: {{ item.priority }}</small>
                     </div>
-                    <div class="mx-5">
-                        <div class="d-flex flex-column flex-md-row mb-2" style="height: 4.25rem;">
-                            <div class="d-flex flex-wrap">
-                                <button class="btn btn-outline-secondary btn-sm m-0" style="flex: 0 0 48%; border-radius: 0;" onclick="assignPriority('{{ item.id }}', 'doFirst')">Do First</button>
-                                <button class="btn btn-outline-secondary btn-sm m-0" style="flex: 0 0 48%; border-radius: 0;" onclick="assignPriority('{{ item.id }}', 'schedule')">Schedule</button>
-                                <button class="btn btn-outline-secondary btn-sm m-0" style="flex: 0 0 48%; border-radius: 0;" onclick="assignPriority('{{ item.id }}', 'delegate')">Delegate</button>
-                                <button class="btn btn-outline-secondary btn-sm m-0" style="flex: 0 0 48%; border-radius: 0;" onclick="assignPriority('{{ item.id }}', 'eliminate')">Eliminate</button>
+                    <div>
+                        <div class="d-flex flex-column flex-md-row mb-2 justify-content-end">
+                            <div class="d-flex flex-wrap ms-auto">
+                                <button class="btn btn-outline-secondary btn-sm m-0 col-6" style="border-radius: .2rem 0 0 0;" onclick="assignPriority('{{ item.id }}', 'doFirst')">Do First</button>
+                                <button class="btn btn-outline-secondary btn-sm m-0 col-6" style="border-radius: 0 .2rem 0 0;" onclick="assignPriority('{{ item.id }}', 'schedule')">Schedule</button>
+                                <button class="btn btn-outline-secondary btn-sm m-0 col-6" style="border-radius: 0 0 0 .2rem;" onclick="assignPriority('{{ item.id }}', 'delegate')">Delegate</button>
+                                <button class="btn btn-outline-secondary btn-sm m-0 col-6" style="border-radius: 0 0 .2rem 0;" onclick="assignPriority('{{ item.id }}', 'eliminate')">Eliminate</button>
                             </div>
                         </div>
-                        <div class="ms-auto">
+                        <div class="d-flex ms-auto justify-content-end">
                             <!-- Button to Remove Item Clone -->
-                            <button class="btn btn-outline-danger btn-sm d-flex align-items-center ms-auto" onclick="removeItemClone('{{ item.id }}')">
+                            <button class="btn btn-outline-danger btn-sm d-flex align-items-center ms-autofs-6" onclick="removeItemClone('{{ item.id }}')">
                                 <i class="fas fa-times me-2"></i>&nbsp;Remove from Matrix
                             </button>
                         </div>
                     </div>
     
                     <div class="position-absolute" style="right: 0; top: 0;">
-                        <button class="btn btn-sm" data-bs-toggle="modal" data-bs-target="#editItemModal" data-id="{{ item.id }}" data-title="{{ item.title }}" data-description="{{ item.description }}" data-deadline="{{ item.deadline }}">
-                            <i class="fas fa-edit"></i>
-                        </button>
+                        
                     </div>
                 </div>
                 {% endfor %}
@@ -130,7 +144,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="addNewItemModalLabel">Add New Item</h5>
-                <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
                 <!-- Nav tabs -->
@@ -174,7 +188,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script>
         const tasks = document.querySelectorAll(".task-item, .item-clone");
         const quadrants = document.querySelectorAll(".quadrant");
@@ -575,17 +589,34 @@
                 newItem.setAttribute('data-order', '');
                 newItem.setAttribute('data-deadline', deadline);
                 newItem.innerHTML = `
-                <div>
-                    <input type="checkbox" class="select-item me-2">
-                    <strong>${title}</strong> <br>
-                    <small class="text-muted">Deadline: ${deadline ? deadline : 'None'}</small>
-                    <small class="text-muted" id="assigned-quadrant-${data.item.id}">Assigned to: </small>
-                </div>
-                <div>
-                    <button class="btn btn-outline-secondary btn-sm" onclick="assignPriority('${data.item.id}', 'doFirst')">Do First</button>
-                    <button class="btn btn-outline-secondary btn-sm" onclick="assignPriority('${data.item.id}', 'schedule')">Schedule</button>
-                    <button class="btn btn-outline-secondary btn-sm" onclick="assignPriority('${data.item.id}', 'delegate')">Delegate</button>
-                    <button class="btn btn-outline-secondary btn-sm" onclick="assignPriority('${data.item.id}', 'eliminate')">Eliminate</button>
+                <div class="list-group-item d-flex justify-content-between align-items-center task-item p-2 p-md-3 border border-secondary rounded mb-2 bg-light cursor-move d-inline-block small" draggable="true" data-id="${data.item.id}" data-position-x="" data-position-y="" data-priority="" data-order="" data-deadline="${deadline}">
+                    <div class="w-100 me-2 align-self-start">
+                        <input type="checkbox" class="select-item me-2" value="${data.item.id}">
+                        <strong>${title}</strong> <br>
+                        <small>Deadline: ${deadline ? deadline : 'None'}</small>
+                        <small class="text-muted" id="assigned-quadrant-${data.item.id}">Assigned to: </small>
+                    </div>
+                    <div>
+                        <div class="d-flex flex-column flex-md-row mb-2 justify-content-end">
+                            <div class="d-flex flex-wrap ms-auto">
+                                <button class="btn btn-outline-secondary btn-sm m-0 col-6" style="border-radius: .2rem 0 0 0;" onclick="assignPriority('${data.item.id}', 'doFirst')">Do First</button>
+                                <button class="btn btn-outline-secondary btn-sm m-0 col-6" style="border-radius: 0 .2rem 0 0;" onclick="assignPriority('${data.item.id}', 'schedule')">Schedule</button>
+                                <button class="btn btn-outline-secondary btn-sm m-0 col-6" style="border-radius: 0 0 0 .2rem;" onclick="assignPriority('${data.item.id}', 'delegate')">Delegate</button>
+                                <button class="btn btn-outline-secondary btn-sm m-0 col-6" style="border-radius: 0 0 .2rem 0;" onclick="assignPriority('${data.item.id}', 'eliminate')">Eliminate</button>
+                            </div>
+                        </div>
+                        <div class="d-flex ms-auto justify-content-end">
+                            <!-- Button to Remove Item Clone -->
+                            <button class="btn btn-outline-danger btn-sm d-flex align-items-center ms-autofs-6" onclick="removeItemClone('${data.item.id}')">
+                                <i class="fas fa-times me-2"></i>&nbsp;Remove from Matrix
+                            </button>
+                        </div>
+                    </div>
+                    <div class="position-absolute" style="right: 0; top: 0;">
+                        <button class="btn btn-sm" data-bs-toggle="modal" data-bs-target="#editItemModal" data-id="${data.item.id}" data-title="${title}" data-description="" data-deadline="${deadline}">
+                            <i class="fas fa-edit"></i>
+                        </button>
+                    </div>
                 </div>
                 `;
                 document.getElementById('items-list').appendChild(newItem);
